first version appshell

--- a/src/components/appShell/AppShell.scss
+++ b/src/components/appShell/AppShell.scss
@@ -1,5 +1,5 @@
 .AppShell {
-  background-color: red;
+  background-color: #3aafa9;
   text-align: center;
   position: relative;
   min-height: 100vh;
@@ -7,4 +7,6 @@
 
 .content-wrap {
   padding-bottom: 2.5rem;
+  margin-left: 12rem;
+  margin-right: 12rem;
 }
