--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -1,4 +1,13 @@
 .Header {
-  background-color: black;
+  background-color: #2b7a78;
   height: 4rem;
+  text-align: center;
+  vertical-align: middle;
+  margin-bottom: 1rem;
+  color: white;
+
+  nav {
+    padding-top: 1rem;
+    color: white;
+  }
 }
