--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -1,5 +1,5 @@
 .Header {
-  background-color: #2b7a78;
+  background-color: white;
   height: 4rem;
   text-align: center;
   vertical-align: middle;
