--- a/src/components/common/Footer/Footer.scss
+++ b/src/components/common/Footer/Footer.scss
@@ -1,14 +1,22 @@
-.Footer {
-  background-color: #2b7a78;
-  text-align: center;
-  position: absolute;
+#Footer {
+  background-color: #eeeeee;
+  color: #3c4858;
+  text-align: left;
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 4rem;
-  color: white;
+  margin-top: -4rem;
+  clear: both;
+  border-top: 1px solid #d0d3d4;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  font-weight: bold;
+  font-size: 14px;
 
   a {
-    color: white;
+    color: #3c4858;
     display: inline-block;
   }
 }
